--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "react-datepicker-on-steroids",
+  "name": "@coax/react-datepicker",
   "version": "0.0.1",
-  "description": "",
+  "description": "Datepicker for React.js",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development",
     "transpile": "eslint src/ && babel src -d dist --copy-files",
     "prepublishOnly": "npm run transpile",
@@ -12,9 +11,16 @@
     "deploy": "gh-pages -d examples/dist",
     "publish-demo": "npm run build && npm run deploy"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "datepicker"
+  ],
   "author": "COAX Sofware",
   "license": "ISC",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/coaxsoft/react-datepicker.git"
+  },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
